--- a/custom-video-player/index.html
+++ b/custom-video-player/index.html
@@ -14,8 +14,36 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/progress.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/progress.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Custom Video Player</h1>
+    <video
+      src="videos/movie.mp4"
+      id="video"
+      class="screen"
+      poster="img/poster.png"
+    ></video>
+    <div class="controls">
+      <button class="btn" id="play">
+        <div class="fa fa-play fa-2x"></div>
+      </button>
+      <button class="btn" id="stop">
+        <i class="fa fa-stop fa-2x"></i>
+      </button>
+      <input
+        type="range"
+        id="progress"
+        class="progress"
+        min="0"
+        max="100"
+        step="0.1"
+        value="0"
+      />
+      <span class="timestamp" id="timestamp">00:00</span>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
