--- a/custom-video-player/index.html
+++ b/custom-video-player/index.html
@@ -44,6 +44,8 @@
       <span class="timestamp" id="timestamp">00:00</span>
     </div>
 
+    <!-- W3School audio/video api -->
+    <!-- https://www.w3schools.com/tags/ref_av_dom.asp -->
     <script src="script.js"></script>
   </body>
 </html>
