--- a/Exchange-Rate-Calculator/index.html
+++ b/Exchange-Rate-Calculator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exchange Rate Calculator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./stylel.css" />
   </head>
   <body>
     <img src="img/money.png" alt="" class="money-img" />
