--- a/Menu Slider & Modal/index.html
+++ b/Menu Slider & Modal/index.html
@@ -64,7 +64,7 @@
       <h2>Benefits</h2>
       <ul>
         <li>Lifetime Access</li>
-        <li>2o Day Money Back</li>
+        <li>20 Day Money Back</li>
         <li>Customer Support</li>
       </ul>
 
@@ -86,19 +86,29 @@
         <button class="close-btn" id="close">
           <i class="fa fa-times"></i>
         </button>
-        <div class="madal-header">
+        <div class="modal-header">
           <h3>Sign Up</h3>
         </div>
         <div class="modal-content">
           <p>Register with us to get offers, support and more</p>
-          <form class="modaal-form">
+          <form class="modal-form">
             <div>
               <label for="name">Name</label>
-              <input type="text" placeholder="Enter Name" id="name" />
+              <input
+                type="text"
+                class="form-input"
+                placeholder="Enter Name"
+                id="name"
+              />
             </div>
             <div>
               <label for="email">Email</label>
-              <input type="email" placeholder="Enter Email" id="email" />
+              <input
+                type="email"
+                class="form-input"
+                placeholder="Enter Email"
+                id="email"
+              />
             </div>
             <div>
               <label for="password">Password</label>
@@ -106,6 +116,7 @@
                 type="password"
                 placeholder="Enter password"
                 id="password"
+                class="form-input"
               />
             </div>
             <div>
@@ -114,6 +125,7 @@
                 type="password"
                 placeholder="Enter password"
                 id="password2"
+                class="form-input"
               />
             </div>
             <input type="submit" value="Submit" class="submit-btn" />
