Load, play and pause initial song

--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -27,13 +27,13 @@
       </div>
       <div class="navigation">
         <button id="prev" class="action-btn">
-          <div class="fas fa-backward"></div>
+          <i class="fas fa-backward"></i>
         </button>
         <button id="play" class="action-btn action-btn-big">
-          <div class="fas fa-play"></div>
+          <i class="fas fa-play"></i>
         </button>
         <button id="next" class="action-btn">
-          <div class="fas fa-forward"></div>
+          <i class="fas fa-forward"></i>
         </button>
       </div>
     </div>
