wrote styles for speed typer game

--- a/Typing Game/index.html
+++ b/Typing Game/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <button id="setting-btn" class="settings-btn">
-      <i class="fas fa-cog"></i>
+      <i class="fas fa-cog"></i> Cog
     </button>
 
     <div id="settings" class="settings">
