--- a/Typing Game/index.html
+++ b/Typing Game/index.html
@@ -7,7 +7,7 @@
     <title>Speed Typing</title>
   </head>
   <body>
-    <button id="setting-btn" class="settings-btn">
+    <button id="settings-btn" class="settings-btn">
       <i class="fas fa-cog"></i> Cog
     </button>
 
