--- a/Memory Cards/index.html
+++ b/Memory Cards/index.html
@@ -24,7 +24,7 @@
     </h1>
 
     <div id="cards-container" class="cards">
-      <div class="card active show-answer">
+      <!-- <div class="card active show-answer">
         <div class="inner-card">
           <div class="inner-card-front">
             <p>What is PHP</p>
@@ -44,7 +44,7 @@
             <p>A programming language</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="navigation">
       <button id="prev" class="nav-button">
