--- a/Breakout/index.html
+++ b/Breakout/index.html
@@ -15,11 +15,11 @@
         Use your right and left keys to move the paddle to bounce the ball up
         and break the blocks.
       </p>
-      <p>Uf you miss the ball, your score and the blocks will reset</p>
+      <p>If you miss the ball, your score and the blocks will reset</p>
       <button id="close-btn" class="btn">Close</button>
-
-      <canvas id="canvas" width="800" height="600"></canvas>
     </div>
+
+    <canvas id="canvas" width="800" height="600"></canvas>
 
     <script src="script.js"></script>
   </body>
