Created countdown function

--- a/Count Down/index.html
+++ b/Count Down/index.html
@@ -17,7 +17,7 @@
         <small>days</small>
       </div>
       <div class="time">
-        <h2 class="hours">00</h2>
+        <h2 id="hours">00</h2>
         <small>hours</small>
       </div>
       <div class="time">
