--- a/Speech RecognitionApi/index.html
+++ b/Speech RecognitionApi/index.html
@@ -13,11 +13,7 @@
 
     <h3>Speak the number into your microphone</h3>
 
-    <div id="msg" class="msg">
-      <div>You said:</div>
-      <span class="box">20</span>
-      <div>Go HIGHER</div>
-    </div>
+    <div id="msg" class="msg"></div>
 
     <script src="script.js"></script>
   </body>
