Capture mic input

--- a/Speech RecognitionApi/index.html
+++ b/Speech RecognitionApi/index.html
@@ -9,7 +9,7 @@
   <body>
     <img src="img/mic.png" alt="Speak" />
 
-    <h1>Guess a Number Between 1 -100</h1>
+    <h1>Guess a Number Between 1 - 100</h1>
 
     <h3>Speak the number into your microphone</h3>
 
